--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
           <a ng-if="islogin==false" ui-sref='login' class='navbar-brand'>Login</a>
           <a ng-if='islogin==false' ui-sref='regist' class='navbar-brand'>Regist</a>
           <a ng-if='islogin==true' ui-sref='logout' class="navbar-brand">Logout</a>
+          <a ng-if="islogin==true" ui-sref='create-page' class='navbar-brand'>Create</a>
         </div>
       </div>
     </div>
@@ -42,9 +43,6 @@
     <script src="vendor/angular-messages/angular-messages.js"></script>
     <script src="vendor/angular-resource/angular-resource.js"></script>
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="vendor/moment/moment.js"></script>
-    <script src="vendor/moment/locale/de.js"></script>
-    <script src="vendor/angular-moment/angular-moment.js"></script>
     <script src="js/services/lb-services.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services/auth.js"></script>
