--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,10 @@
           <a ng-if="islogin==false" ui-sref='login' class='navbar-brand'>Login</a>
           <a ng-if='islogin==false' ui-sref='regist' class='navbar-brand'>Regist</a>
           <a ng-if='islogin==true' ui-sref='logout' class="navbar-brand">Logout</a>
-          <a ng-if="islogin==true" ui-sref='create-page' class='navbar-brand'>Create</a>
+          <md-menu>
+            <button ng-click="$mdOpenMenu()">
+              Hello
+            </button>
         </div>
       </div>
     </div>
@@ -36,7 +39,11 @@
     </div>
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="static/js/moment.min.js"></script>
     <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/moment/moment.js"></script>
+    <script src="vendor/angular-moment/angular-moment.js"></script>
+    <script src='vendor/angular-momentjs/angular-momentjs.js'></script>
     <script src="vendor/angular-aria/angular-aria.js"></script> 
     <script src="vendor/angular-animate/angular-animate.js"></script> 
     <script src="vendor/angular-material/angular-material.js"></script>
@@ -45,6 +52,7 @@
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="js/services/lb-services.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/filters/time.js"></script>
     <script src="js/services/auth.js"></script>
     <script src="js/controllers/todo.js"></script>
     <script src='js/controllers/user.js'></script>
